# clodcast

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cliff.toml  pyproject.toml  release-please-config.json  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: durable-voices.md
docs/superpowers/plans/: 2026-06-03-automated-releases.md  2026-06-04-per-item-orchestrator.md
docs/superpowers/specs/: 2026-06-03-automated-releases-design.md  2026-06-04-per-item-orchestrator-design.md
skills/daily-podcast/: SKILL.md  orchestrate.py  render.py
skills/daily-podcast/prompts/: daily.md  summarize_item.md
skills/daily-podcast/refs/: house_voice.txt
tests/: conftest.py  test_orchestrate.py  test_r2.py  test_render.py
